# deepseek-history-viewer

./: .gitignore  .rake_tasks~  Cargo.toml  README.md  Rakefile  code.sh  create_icons.sh  deepseek-desktop.desktop  fix-deb.sh  regenerate.sh  run_desktop.sh  stop_server.sh  tauri.conf.json
.github/workflows/: build.yml  release.yml
src/: config.rs  generator.rs  indexer.rs  lib.rs  main.rs  search.rs  server.rs  tauri.rs  templates.rs
static/: code-actions.js  main.css  search-original.js  search-rust.js  search.js
templates/: base.html  conversation.html  import.html  index.html  processing.html
tests/: search_test.rs
