[package]
name = "deepseek-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "cors"] }

# HTML templating
askama = "0.12"
askama_axum = "0.4"

# Markdown to HTML
pulldown-cmark = "0.11"

# Syntax highlighting
syntect = "5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Search engine
tantivy = "0.22"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
walkdir = "2.5"
html-escape = "0.2"
rayon = "1.10"
regex = "1.10"
dirs = "5.0"

# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "deepseek_viewer"
path = "src/lib.rs"

[[bin]]
name = "deepseek-desktop"
path = "src/tauri.rs"

[[bin]]
name = "deepseek-viewer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
